# myLang

./: .gitignore  LICENSE  README.md  idees.md  myLang.cabal  namedType  programgeneration  stack.yaml  todo.txt
src/: ANormalForm.hs  Associativity.hs  BottumUp.hs  BruijnEnvironment.hs  BruijnTerm.hs  CodeGen.hs  Compile.hs  Debug.hs  Enviroment.hs  Environment.hs  Error.hs  ErrorCollector.hs  Eval.hs  Expresion.hs  ExternalFunctions.hs  FreeEnvironment.hs  InfixFix.hs  Info.hs  Inprocess.hs  Jit.hs  Lam1.hs  Lambda.hs  LambdaF.hs  LambdaF2.hs  Lexer.hs  MTable.hs  MakeType.hs  ModificationTags.hs  ModifiedLambda.hs  Modify.hs  Name.hs  Names.hs  Operator.hs  Opperator.hs  Parser.hs  ParserErrorCorrect.hs  ParserType.hs  PrettyPrint.hs  SimpleEval.hs  SourcePostion.hs  (+12 more)
src/Interperter/: Interperter.hs
src/LLVM/AST/: Typed.hs
tests/: ArbiRef.hs  ArbitraryLambda.hs  ArbitraryQuickcheck.hs  ArbitraryType.hs  ArbitraryVallue.hs  ArbitraryValue.hs  BackList.hs  BackListT.hs  ChurchEnconding.hs  Errors.hs  ExampleBruijn.hs  ExampleLambda.hs  GenState.hs  Generator.hs  Logic.hs  MakeAnormal.hs  MakeTagedTerm.hs  MakeTerm.hs  MakeType.hs  MakeTypedTerm.hs  PrintBruijn.hs  Properties.hs  Sample.hs  SearchTree.hs  ShrinkLambda.hs  SmallCheck.hs  StateTransMany.hs  TestANormalForm.hs  TestArbitrary.hs  TestBackList.hs  TestBackListT.hs  TestBacktrack.hs  TestBruijn.hs  TestBruijnEnv.hs  TestCodeGen.hs  TestEval.hs  TestExternal.hs  TestFail.hs  TestLambda.hs  TestLogic.hs  (+14 more)
tests/bench/: NFDataInstances.hs  benchmark.hs
tests/testLib/: test-myLang-lib.cabal
tests/testLib/src/: ArbitraryLambda.hs  ArbitraryType.hs  BackList.hs  BackListT.hs  GenState.hs
