name:                myLang
version:             0.1.0.0
synopsis: complier for my own language
description: this is a attent of me to creating my own Programming language.
             the language is now similar to typed lambda calculus, and has only a interpreter.
             But I have plans for a complete Programming language similar to Haskell, but with: Linear Types, Region Interferences, strict symatics.
license:             BSD3
license-file:        LICENSE
category: Compilers/Interpreters
author:              Rens
maintainer:          de_kwibus@live.nl

build-type:          Simple
cabal-version:       >=1.10

source-repository this
  type:     git
  location: file:///home/rens/Documenten/projects/myLang
  tag: HEAD
executable interperter
  main-is:             Interperter.hs
  build-depends:       base >=4 && < 5
                      ,myLang
                      ,either-unwrap
                      ,haskeline
                      ,transformers
                      ,ansi-wl-pprint
  hs-source-dirs:      src/Interperter
  default-language:    Haskell2010

executable sample
  main-is:             Sample.hs
  build-depends:       base >=4 && < 5
                      ,myLang
                      ,QuickCheck
                      ,mtl
                      ,transformers
                      ,containers
  hs-source-dirs:      tests
  default-language:    Haskell2010

library
  build-depends:       base >=4 && < 5
-- FIXME
                      ,NoTrace 
                      ,containers
                      ,parsec
                      ,parsec-numbers
                      ,mtl
                      ,transformers
                      ,ansi-wl-pprint
                      ,dlist

  hs-source-dirs:      src/
  exposed-modules:     Lambda
                      ,Parser
                      ,Lexer
                      ,Value
                      ,BruijnTerm
                      ,Eval
                      ,Operator
                      ,PrettyPrint
                      ,Type
                      ,MakeType
                      ,TypeCheck
                      ,FreeEnvironment
                      ,BruijnEnvironment
                      ,InfixFix
                      ,Info
                      ,TypeError
                      ,ErrorCollector
                      ,Name
                      ,Associativity
  default-language:    Haskell2010

test-suite tests
  Hs-Source-Dirs:      tests
  Main-Is:             test.hs
  Type:                exitcode-stdio-1.0

  Build-Depends:       base >=4 && < 5
                        -- FIXME
                      ,NoTrace 
                      ,myLang
                      ,tasty
                      ,tasty-hunit
                      ,tasty-quickcheck
                      ,QuickCheck
                      ,mtl
                      ,containers
                      ,transformers

                      ,parsec
                      ,parsec-numbers
                      ,mtl
                      ,transformers
                      ,ansi-wl-pprint
                      ,dlist
  Ghc-Options:          -Wall -threaded -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  Hs-Source-Dirs:      tests ,src
  build-depends:       base >=4 && < 5
                      ,doctest-discover
                      ,doctest
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall

Benchmark bench
    type:       exitcode-stdio-1.0
    main-is:    benchmark.hs
    Hs-Source-Dirs: tests, tests/bench
    build-depends:  base
                    ,criterion
                    ,QuickCheck
                    ,myLang
                    ,mtl
                    ,ansi-wl-pprint
                    ,parsec
                    ,parsec-numbers
                    ,either-unwrap
                    ,transformers
                    ,containers
                    ,deepseq
                    ,deepseq-generics
    default-language:    Haskell2010
