name:                test-myLang-lib
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:

-- The file containing the license text.
license-file:        LICENSE
author:              Rens Sikma
maintainer:          de_kwibus@live.nl

-- copyright:

-- category:

build-type:          Simple

cabal-version:       >=1.10


library
  exposed-modules:   ArbitraryType,
                     ArbitraryLambda

  other-modules:     ArbiRef,
                     ArbitraryValue,
                     GenState,
                     BackList,
                     Logic,
                     BackListT

  other-extensions:    FlexibleInstances, StandaloneDeriving, DeriveGeneric

  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2 && <2.3,
                       myLang
                       -- containers >=0.5 && <0.6,
                       -- transformers >=0.4 && <0.5

  hs-source-dirs:      src

  default-language:    Haskell2010

